Add struct for SOR iteration count. Fix memory leaks. Add report generator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(mv)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(mv main.cpp matrix.cpp matrix.h vector.cpp vector.h operations.cpp operations.h lu.cpp lu.h Ldlt.cpp Ldlt.h)
+add_executable(mv main.cpp matrix.cpp matrix.h vector.cpp vector.h lu.cpp lu.h ldlt.cpp ldlt.h)
